--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scroll": "^1.8.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "sweetalert2": "^10.15.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
